# xdg-desktop-portal-dde

./: CMakeLists.txt
debian/: changelog
misc/translations/translations/: xdg-desktop-portal-dde_pl.ts
src/: CMakeLists.txt  access.cpp  access.h  accessdialog.cpp  accessdialog.h  accessdialogtypes.cpp  accessdialogtypes.h  request.cpp  request.h  screenshot.h  settings.cpp  settings.h  utils.cpp  xdg-desktop-portal-dde.cpp
src/wayland/: CMakeLists.txt  foreignparent.cpp  foreignparent.h  request2.cpp  request2.h  screenshotimage.cpp  screenshotimage.h  screenshotportal.cpp  screenshotportal.h
src/wayland/protocols/: common.h  screencopy.cpp  screencopy.h  treelandcapture.cpp  treelandcapture.h
tests/: CMakeLists.txt  test_access_dbus_types.cpp  test_access_dialog.cpp  test_screenshot_image.cpp  test_screenshot_interface.cpp  test_settings_dbus_metatype.cpp
